[gd_scene load_steps=19 format=2]

[ext_resource path="res://data/asset scenes/game_settings.gd" type="Script" id=1]
[ext_resource path="res://data/fonts/ReemKufi-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://data/graphics/talkhead0b2.png" type="Texture" id=3]
[ext_resource path="res://data/graphics/saves/save2.png" type="Texture" id=4]
[ext_resource path="res://data/graphics/saves/save3.png" type="Texture" id=5]
[ext_resource path="res://data/graphics/saves/save4.png" type="Texture" id=6]
[ext_resource path="res://data/graphics/saves/save5.png" type="Texture" id=7]
[ext_resource path="res://data/graphics/saves/save6.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]

size = 60
outline_size = 0
outline_color = Color( 0.913725, 0.219608, 0.219608, 1 )
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 60
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 155.017, 27.8606 )

[sub_resource type="DynamicFont" id=3]

size = 60
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="RectangleShape2D" id=8]

custom_solver_bias = 0.0
extents = Vector2( 150.721, 23.5647 )

[sub_resource type="DynamicFont" id=4]

size = 60
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="RectangleShape2D" id=9]

custom_solver_bias = 0.0
extents = Vector2( 133.537, 22.1328 )

[sub_resource type="DynamicFont" id=5]

size = 60
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="RectangleShape2D" id=10]

custom_solver_bias = 0.0
extents = Vector2( 103.466, 22.1328 )

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 251.05, 142.891 )

[node name="game_settings" type="Panel" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1920.0
margin_bottom = 1080.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Material", "Mouse", "Rect", "Visibility" ]

[node name="header" type="Label" parent="." index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 91.2408
margin_top = 75.1161
margin_right = 280.241
margin_bottom = 165.116
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "MENU"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Visibility", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="load game" type="Label" parent="." index="1"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 94.4481
margin_top = 200.07
margin_right = 301.448
margin_bottom = 260.07
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "Load Game"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="load" type="Area2D" parent="load game" index="0"]
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="col" type="CollisionShape2D" parent="load game/load" index="0"]
position = Vector2( 158.949, 44.3912 )
shape = SubResource( 7 )

[node name="save game" type="Label" parent="." index="2"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 95.2988
margin_top = 303.0
margin_right = 398.299
margin_bottom = 393.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
text = "Save Game"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="save" type="Area2D" parent="save game" index="0"]
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="col" type="CollisionShape2D" parent="save game/save" index="0"]
position = Vector2( 153.653, 45.9251 )
shape = SubResource( 8 )

[node name="exit game" type="Label" parent="." index="3"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 94.3815
margin_top = 405.285
margin_right = 370.381
margin_bottom = 495.285
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
text = "Exit Game"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="exit" type="Area2D" parent="exit game" index="0"]
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="col" type="CollisionShape2D" parent="exit game/exit" index="0"]
position = Vector2( 138.901, 47.0272 )
shape = SubResource( 9 )

[node name="patreon" type="Label" parent="." index="4"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 98.0828
margin_top = 882.745
margin_right = 315.083
margin_bottom = 972.745
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 5 )
text = "Patreon"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="patreon" type="Area2D" parent="patreon" index="0"]
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="col" type="CollisionShape2D" parent="patreon/patreon" index="0"]
position = Vector2( 109.126, 46.874 )
shape = SubResource( 10 )

[node name="savegames" type="Container" parent="." index="5"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -21.4282
margin_top = 1.948
margin_right = 18.5718
margin_bottom = 41.948
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Mouse" ]

[node name="save1" type="Sprite" parent="savegames" index="0"]
modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( 693.884, 341.585 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="save1" type="Area2D" parent="savegames/save1" index="0"]
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Pickable" ]

[node name="col" type="CollisionShape2D" parent="savegames/save1/save1" index="0"]
shape = SubResource( 6 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="save2" type="Sprite" parent="savegames" index="1"]
modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( 1183.13, 341.488 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="save2" type="Area2D" parent="savegames/save2" index="0"]
position = Vector2( -543.605, 0.108124 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="col" type="CollisionShape2D" parent="savegames/save2/save2" index="0"]
position = Vector2( 542.016, -7.19489 )
shape = SubResource( 6 )

[node name="save3" type="Sprite" parent="savegames" index="2"]
modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( 1669.74, 343.728 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="save3" type="Area2D" parent="savegames/save3" index="0"]
editor/display_folded = true
position = Vector2( -2.65601, -2.38089 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="col" type="CollisionShape2D" parent="savegames/save3/save3" index="0"]
shape = SubResource( 6 )

[node name="save4" type="Sprite" parent="savegames" index="3"]
modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( 693.495, 637.002 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="save4" type="Area2D" parent="savegames/save4" index="0"]
position = Vector2( 0.432983, -328.241 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="col" type="CollisionShape2D" parent="savegames/save4/save4" index="0"]
position = Vector2( -2.39825, 328.567 )
shape = SubResource( 6 )

[node name="save5" type="Sprite" parent="savegames" index="4"]
modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( 1184.4, 635.054 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 7 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="save5" type="Area2D" parent="savegames/save5" index="0"]
position = Vector2( -545.012, -326.077 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="col" type="CollisionShape2D" parent="savegames/save5/save5" index="0"]
position = Vector2( 549.211, 321.372 )
shape = SubResource( 6 )

[node name="save6" type="Sprite" parent="savegames" index="5"]
modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( 1669.45, 635.054 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 8 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="save6" type="Area2D" parent="savegames/save6" index="0"]
position = Vector2( -1083.96, -326.077 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="col" type="CollisionShape2D" parent="savegames/save6/save6" index="0"]
position = Vector2( 1084.03, 323.77 )
shape = SubResource( 6 )

[node name="fx" type="Tween" parent="." index="6"]
repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[connection signal="input_event" from="load game/load" to="." method="_on_load_input_event"]
[connection signal="mouse_entered" from="load game/load" to="." method="_on_load_mouse_entered"]
[connection signal="mouse_exited" from="load game/load" to="." method="_on_load_mouse_exited"]
[connection signal="input_event" from="save game/save" to="." method="_on_save_input_event"]
[connection signal="mouse_entered" from="save game/save" to="." method="_on_save_mouse_entered"]
[connection signal="mouse_exited" from="save game/save" to="." method="_on_save_mouse_exited"]
[connection signal="input_event" from="exit game/exit" to="." method="_on_exit_input_event"]
[connection signal="mouse_entered" from="exit game/exit" to="." method="_on_exit_mouse_entered"]
[connection signal="mouse_exited" from="exit game/exit" to="." method="_on_exit_mouse_exited"]
[connection signal="input_event" from="patreon/patreon" to="." method="_on_patreon_input_event"]
[connection signal="mouse_entered" from="patreon/patreon" to="." method="_on_patreon_mouse_entered"]
[connection signal="mouse_exited" from="patreon/patreon" to="." method="_on_patreon_mouse_exited"]
[connection signal="input_event" from="savegames/save1/save1" to="." method="_on_save1_input_event"]
[connection signal="mouse_entered" from="savegames/save1/save1" to="." method="_on_save1_mouse_entered"]
[connection signal="mouse_exited" from="savegames/save1/save1" to="." method="_on_save1_mouse_exited"]
[connection signal="input_event" from="savegames/save2/save2" to="." method="_on_save2_input_event"]
[connection signal="mouse_entered" from="savegames/save2/save2" to="." method="_on_save2_mouse_entered"]
[connection signal="mouse_exited" from="savegames/save2/save2" to="." method="_on_save2_mouse_exited"]
[connection signal="input_event" from="savegames/save3/save3" to="." method="_on_save3_input_event"]
[connection signal="mouse_entered" from="savegames/save3/save3" to="." method="_on_save3_mouse_entered"]
[connection signal="mouse_exited" from="savegames/save3/save3" to="." method="_on_save3_mouse_exited"]
[connection signal="input_event" from="savegames/save4/save4" to="." method="_on_save4_input_event"]
[connection signal="mouse_entered" from="savegames/save4/save4" to="." method="_on_save4_mouse_entered"]
[connection signal="mouse_exited" from="savegames/save4/save4" to="." method="_on_save4_mouse_exited"]
[connection signal="input_event" from="savegames/save5/save5" to="." method="_on_save5_input_event"]
[connection signal="mouse_entered" from="savegames/save5/save5" to="." method="_on_save5_mouse_entered"]
[connection signal="mouse_exited" from="savegames/save5/save5" to="." method="_on_save5_mouse_exited"]
[connection signal="input_event" from="savegames/save6/save6" to="." method="_on_save6_input_event"]
[connection signal="mouse_entered" from="savegames/save6/save6" to="." method="_on_save6_mouse_entered"]
[connection signal="mouse_exited" from="savegames/save6/save6" to="." method="_on_save6_mouse_exited"]
